--- a/markdowns/MSstats_PD_SS.Rmd
+++ b/markdowns/MSstats_PD_SS.Rmd
@@ -31,8 +31,8 @@ Welcome to the script! Here are the variables that you can change to specificall
 
 ```{r user variables, include = TRUE}
 # Specify input and output directories
-input_dir <- "~/Documents/Coding/MSstats_workflow/input/"
-output_dir <- "~/Documents/Coding/MSstats_workflow/output/"
+input_dir <- "input/"
+output_dir <- "output/"
 
 # Specify the names of your raw data and annotations csv
 raw_file <- "sam_season_PSMs.txt"
